<resources>
    <string name="app_name">北大侠客行</string>
    <string name="version">1.1beta</string>
    <string name="title_activity_pkuxkx_login">Pkuxkx登录</string>
    <string name="logo">北大侠客行logo</string>
    <string name="hint_selectserver">选择端口:</string>
    <string name="enterserver">进入</string>
    <string name="selectserver">选择服务器</string>
    <string name="cnipUTF">mud.pkuxkx.net:8081</string>
    <string name="cnipGBK">mud.pkuxkx.net:8080</string>
    <string name="ipUTF">pkuxkx.net:8081</string>
    <string name="ipGBK">pkuxkx.net:8080</string>
    <string name="selectiphint">china UTF</string>
    <string name="about">关于</string>
    <string name="errorip">IP格式错误</string>
    <string name="language">语言</string>
    <string name="send">发送</string>
    <string name="settings">设置</string>
    <string name="invisable">隐藏</string>
    <string name="title_activity_mud_setting">mudSetting</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="dialog_setting">设置</string>
</resources>